--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,17 @@ h2{
     text-align: center;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 #results {
     border: 1px solid #ccc;
     padding: 10px;
